simple keyboard input
combined the work found on Bare Bones from OSDev.wiki and YouTube tutorial from PageKey (linked in helpful-resources)

--- a/ShompOS/Makefile
+++ b/ShompOS/Makefile
@@ -1,42 +1,36 @@
-# Compiler and linker
+PATH := $(HOME)/opt/cross/bin:$(PATH)
+
+# tools
 CC = i686-elf-gcc
 LD = i686-elf-ld
+AS = i686-elf-as
 
 # Flags
 CFLAGS = -ffreestanding -O2 -Wall -Wextra
 LDFLAGS = -T src/linker.ld -nostdlib
 
-# Directories
-SRC_DIR = src
-BUILD_DIR = build
-ISO_DIR = iso
 
-# Files
-KERNEL_OBJS = $(BUILD_DIR)/kernel.o $(BUILD_DIR)/boot.o
+BOOT=		src/kernel/boot.s
+KERNEL=		src/kernel/kernel.c
+LINKER=		src/linker.ld
+KERNEL_OUT=	build/shompOS.bin
+ISO_OUT=	build/shompOS.iso
 
-.PHONY: all clean run iso
-
-all: $(BUILD_DIR)/kernel.bin
-
-$(BUILD_DIR)/kernel.bin: $(KERNEL_OBJS)
-	$(CC) $(LDFLAGS) -o $@ $^ -lgcc
-
-$(BUILD_DIR)/%.o: $(SRC_DIR)/kernel/%.c
-	mkdir -p $(BUILD_DIR)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-$(BUILD_DIR)/%.o: $(SRC_DIR)/kernel/%.s
-	mkdir -p $(BUILD_DIR)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-iso: $(BUILD_DIR)/kernel.bin
-	mkdir -p $(ISO_DIR)/boot/grub
-	cp $(BUILD_DIR)/kernel.bin $(ISO_DIR)/boot/kernel.bin
-	cp $(SRC_DIR)/grub.cfg $(ISO_DIR)/boot/grub/grub.cfg
-	grub-mkrescue -o $(ISO_DIR)/shompos.iso $(ISO_DIR)
-
-run: iso
-	qemu-system-i386 -cdrom $(ISO_DIR)/shompos.iso
-
+all: build
+build: clean
+	mkdir -p build
+	${AS} ${BOOT} -o build/boot.o
+	${CC} ${CFLAGS} -c ${KERNEL} -o build/kernel.o
+	${LD} ${LDFLAGS} -o ${KERNEL_OUT} build/boot.o build/kernel.o
+run: build
+	qemu-system-i386 -kernel ${KERNEL_OUT} -monitor stdio
+build-iso: build
+	mkdir -p build/iso/boot/grub
+	cp src/grub.cfg build/iso/boot/grub
+	cp ${KERNEL_OUT} build/iso/boot/grub
+	grub-mkrescue -o ${ISO_OUT} build/iso
+	rm -rf build/iso
+run-iso: build-iso
+	qemu-system-i386 -cdrom ${ISO_OUT}
 clean:
-	rm -rf $(BUILD_DIR) $(ISO_DIR)
+	rm -rf build
