--- a/ShompOS/src/grub.cfg
+++ b/ShompOS/src/grub.cfg
@@ -1,7 +1,3 @@
-set timeout=0
-set default=0
-
-menuentry "ShompOS" {
-    multiboot /boot/kernel.bin
-    boot
+menuentry "shompOS" {
+	multiboot /boot/grub/shompOS.bin
 }
