--- a/ShompOS/src/grub.cfg
+++ b/ShompOS/src/grub.cfg
@@ -1,5 +1,6 @@
-set timeout=0
-set default=0
+# grub.cfg
+# Configuration file for GRUB
+# Cedarville University 2024-25 OSDev Team
 
 menuentry "ShompOS" {
     multiboot /boot/kernel.bin
