makefile and directory standardization

--- a/ShompOS/Makefile
+++ b/ShompOS/Makefile
@@ -1,7 +1,3 @@
-# Makefile
-# Set up configurations of running program
-# Cedarville University 2024-25 OSDev Team
-
 PATH := $(HOME)/opt/cross/bin:$(PATH)
 
 # tools
@@ -9,32 +5,53 @@ CC = i686-elf-gcc
 LD = i686-elf-ld
 AS = i686-elf-as
 
+# directories
+SRC_DIR = src
+BUILD_DIR = build
+OBJ_DIR = $(BUILD_DIR)/obj
+
+LINKER_FILE = $(SRC_DIR)/linker.ld
+KERNEL_OUT = $(BUILD_DIR)/shompOS.bin
+ISO_OUT =	$(BUILD_DIR)/shompOS.iso
+
 # Flags
-CFLAGS = -ffreestanding -O2 -Wall -Wextra
-LDFLAGS = -T src/linker.ld -nostdlib
+CFLAGS = -ffreestanding -O2 -Wall -Wextra -m32 -I./inc -ggdb
+LDFLAGS = -T $(LINKER_FILE) -nostdlib -o $(KERNEL_OUT)
 
+KERNEL_OBJS = 	$(OBJ_DIR)/kernel.o \
+				$(OBJ_DIR)/boot.o 
 
-BOOT=		src/kernel/boot.S
-KERNEL=		src/kernel/kernel.c
-LINKER=		src/linker.ld
-KERNEL_OUT=	build/shompOS.bin
-ISO_OUT=	build/shompOS.iso
+.PHONY: all build run run-curses debug debug-curses clean
 
-all: build
-build: clean
-	mkdir -p build
-	${AS} ${BOOT} -o build/boot.o
-	${CC} ${CFLAGS} -c ${KERNEL} -o build/kernel.o
-	${LD} ${LDFLAGS} -o ${KERNEL_OUT} build/boot.o build/kernel.o
-run: build
-	qemu-system-i386 -kernel ${KERNEL_OUT} -monitor stdio
-build-iso: build
+all: $(BUILD_DIR)/shompOS.bin
+
+$(BUILD_DIR)/shompOS.bin: $(KERNEL_OBJS)
+	$(LD) $(LDFLAGS) $^
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/**/%.c
+	mkdir -p $(OBJ_DIR)
+	$(CC) $(CFLAGS) -c $< -o $@
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/**/%.S
+	mkdir -p $(OBJ_DIR)
+	$(CC) $(CFLAGS) -c $< -o $@\
+
+build: $(BUILD_DIR)/shompOS.bin
 	mkdir -p build/iso/boot/grub
 	cp src/grub.cfg build/iso/boot/grub
 	cp ${KERNEL_OUT} build/iso/boot/grub
 	grub-mkrescue -o ${ISO_OUT} build/iso
 	rm -rf build/iso
-run-iso: build-iso
+
+run: build
 	qemu-system-i386 -cdrom ${ISO_OUT}
+run-curses: build
+	qemu-system-i386 -display curses -cdrom ${ISO_OUT}
+debug: build
+	qemu-system-i386 -s -S -cdrom $(ISO_OUT) &
+	gdb $(KERNEL_OUT) -x debug.gdb
+debug-curses: build
+	qemu-system-i386 -display curses -s -S -cdrom $(ISO_OUT) 
+
 clean:
 	rm -rf build
