makefile and directory standardization

--- a/ShompOS/src/grub.cfg
+++ b/ShompOS/src/grub.cfg
@@ -2,7 +2,6 @@
 # Configuration file for GRUB
 # Cedarville University 2024-25 OSDev Team
 
-menuentry "ShompOS" {
-    multiboot /boot/kernel.bin
-    boot
+menuentry "shompOS" {
+    multiboot /boot/grub/shompOS.bin
 }
