Early ELF executable loading

--- a/ShompOS/Makefile
+++ b/ShompOS/Makefile
@@ -30,7 +30,8 @@ KERNEL_OBJS = 	$(OBJ_DIR)/kernel.o \
 				$(OBJ_DIR)/ramfs.o \
 				$(OBJ_DIR)/ramfs_executables.o \
 				$(OBJ_DIR)/fake_libc.o \
-				$(OBJ_DIR)/test.txt.o
+				$(OBJ_DIR)/elf.o \
+				$(OBJ_DIR)/test.o
 
 .PHONY: all build run run-curses debug debug-curses clean
 
@@ -47,7 +48,7 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/**/%.S
 	mkdir -p $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@\
 
-$(OBJ_DIR)/test.txt.o: inc/elf/test.txt
+$(OBJ_DIR)/test.o: inc/elf/newTest
 	mkdir -p $(OBJ_DIR)
 	$(LD) -r -b binary -o $@ $<
 
