--- a/ShompOS/Makefile
+++ b/ShompOS/Makefile
@@ -36,6 +36,7 @@ KERNEL_OBJS = 	$(OBJ_DIR)/kernel.o \
 				$(OBJ_DIR)/fake_libc.o \
 				$(OBJ_DIR)/process.o \
 				$(OBJ_DIR)/context_switch.o \
+				$(OBJ_DIR)/syscalls.o \
 				$(OBJ_DIR)/elf.o \
 				$(OBJ_DIR)/mnt.o
 
